--- a/src/main/resources/view/DialogBox.fxml
+++ b/src/main/resources/view/DialogBox.fxml
@@ -4,18 +4,40 @@
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.HBox?>
+<?import javafx.scene.shape.Circle?>
 
 <fx:root alignment="TOP_RIGHT"
          maxHeight="1.7976931348623157E308"
          maxWidth="1.7976931348623157E308"
          prefWidth="400.0"
-         spacing="10.0"
+         spacing="5.0"
          type="javafx.scene.layout.HBox"
          xmlns="http://javafx.com/javafx/17"
          xmlns:fx="http://javafx.com/fxml/1">
     <children>
-        <Label fx:id="dialog" text="Label" wrapText="true" minHeight="-Infinity" />
-        <ImageView fx:id="displayPicture" fitHeight="99.0" fitWidth="99.0" pickOnBounds="true" preserveRatio="true" />
+        <Label fx:id="dialog"
+               text="Label"
+               wrapText="true"
+               minHeight="-Infinity"
+               style="-fx-background-color: #404040;
+                      -fx-background-radius: 15px;
+                      -fx-padding: 10px 15px;
+                      -fx-border-radius: 15px;
+                      -fx-border-color: #4a4a4a;
+                      -fx-border-width: 1px;
+                      -fx-effect: dropshadow(gaussian, rgba(0,0,0,0.1), 3, 0.5, 1, 1);" />
+
+        <ImageView fx:id="displayPicture"
+                   fitHeight="50.0"
+                   fitWidth="50.0"
+                   pickOnBounds="true"
+                   preserveRatio="true"
+                   style="-fx-background-radius: 25px;
+                          -fx-effect: dropshadow(gaussian, rgba(0,0,0,0.2), 2, 0.5, 0, 0);">
+            <clip>
+                <javafx.scene.shape.Circle centerX="25.0" centerY="25.0" radius="25.0" />
+            </clip>
+        </ImageView>
     </children>
     <padding>
         <Insets bottom="15.0" left="5.0" right="5.0" top="15.0" />
