--- a/src/main/resources/view/DialogBox.fxml
+++ b/src/main/resources/view/DialogBox.fxml
@@ -18,15 +18,7 @@
         <Label fx:id="dialog"
                text="Label"
                wrapText="true"
-               minHeight="-Infinity"
-               style="-fx-background-color: #404040;
-                      -fx-background-radius: 15px;
-                      -fx-padding: 10px 15px;
-                      -fx-border-radius: 15px;
-                      -fx-border-color: #4a4a4a;
-                      -fx-border-width: 1px;
-                      -fx-effect: dropshadow(gaussian, rgba(0,0,0,0.1), 3, 0.5, 1, 1);" />
-
+               minHeight="-Infinity" />
         <ImageView fx:id="displayPicture"
                    fitHeight="50.0"
                    fitWidth="50.0"
